--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="action_add_condition_immunity">Add Condition</string>
+    <string name="action_add_damage_type">Add Damage Type</string>
     <string name="action_add_language">Add Language</string>
     <string name="action_add_monster">Add monster</string>
     <string name="action_add_sense">Add Sense</string>
@@ -86,5 +87,4 @@
     <string name="title_library">Library</string>
     <string name="title_search">Search</string>
     <string name="wisdom_abbreviation">WIS</string>
-    <string name="add_damage_type">Add Damage Type</string>
 </resources>
