--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
+    <string name="action_add_ability">Add Ability</string>
+    <string name="action_add_condition_immunity">Add Condition</string>
+    <string name="action_add_damage_type">Add Damage Type</string>
+    <string name="action_add_language">Add Language</string>
     <string name="action_add_monster">Add monster</string>
     <string name="action_add_sense">Add Sense</string>
     <string name="action_add_skill">Add Skill</string>
-    <string name="action_add_language">Add Language</string>
-    <string name="action_add_condition_immunity">Add Condition</string>
     <string name="action_edit">Edit</string>
     <string name="actions_label">Actions</string>
     <string name="app_name">MonsterCards</string>
@@ -26,6 +28,7 @@
     <string name="label_basic_info">Basic Info</string>
     <string name="label_burrow_speed">Burrow Speed</string>
     <string name="label_can_hover">Can Hover</string>
+    <string name="label_can_speak_language">Can Speak</string>
     <string name="label_challenge_rating">Challenge Rating</string>
     <string name="label_charisma">Charisma</string>
     <string name="label_climb_speed">Climb Speed</string>
@@ -38,8 +41,10 @@
     <string name="label_custom_speed">Custom Speed</string>
     <string name="label_damage_immunities">Damage Immunities</string>
     <string name="label_damage_resistances">Damage Resistances</string>
+    <string name="label_damage_type">Damage Type</string>
     <string name="label_damage_vulnerabilities">Damage Vulnerabilities</string>
     <string name="label_decrement_field">-</string>
+    <string name="label_description">Description</string>
     <string name="label_dexterity">Dexterity</string>
     <string name="label_fly_speed">Fly Speed</string>
     <string name="label_has_custom_hp">Has Custom HP</string>
@@ -83,8 +88,4 @@
     <string name="title_library">Library</string>
     <string name="title_search">Search</string>
     <string name="wisdom_abbreviation">WIS</string>
-    <string name="label_description">Description</string>
-    <string name="label_damage_type">Damage Type</string>
-    <string name="add_damage_type">Add Damage Type</string>
-    <string name="label_can_speak_language">Can Speak</string>
 </resources>
