--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_add_monster">Add monster</string>
     <string name="action_add_sense">Add Sense</string>
     <string name="action_add_skill">Add Skill</string>
+    <string name="action_add_trait">Add Trait</string>
     <string name="action_edit">Edit</string>
     <string name="actions_label">Actions</string>
     <string name="app_name">MonsterCards</string>
