--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="title_edit_senses">Senses</string>
     <string name="title_edit_skill">Skill</string>
     <string name="title_edit_skills">Skills</string>
+    <string name="title_importMonster">Import Monster</string>
     <string name="title_library">Library</string>
     <string name="title_search">Search</string>
     <string name="wisdom_abbreviation">WIS</string>
