--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,41 +88,48 @@
     <string name="strength_abbreviation">STR</string>
     <string name="title_collections">Collections</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_edit_abilities">Ability</string>
-    <string name="title_edit_ability">Abilities</string>
-    <string name="title_edit_ability_scores">Ability Scores</string>
-    <string name="title_edit_action">Action</string>
-    <string name="title_edit_actions">Actions</string>
-    <string name="title_edit_armor">Armor</string>
-    <string name="title_edit_basic_info">Basic Info</string>
-    <string name="title_edit_challenge_rating">Challenge Rating</string>
-    <string name="title_edit_condition_immunities">Condition Immunities</string>
-    <string name="title_edit_condition_immunity">Condition Immunity</string>
-    <string name="title_edit_damage_immunities">Damage Immunities</string>
-    <string name="title_edit_damage_immunity">Damage Immunity</string>
-    <string name="title_edit_damage_resistance">Damage Resistance</string>
-    <string name="title_edit_damage_resistances">Damage Resistances</string>
-    <string name="title_edit_damage_vulnerabilities">Damage Vulnerabilities</string>
-    <string name="title_edit_damage_vulnerability">Damage Vulnerability</string>
-    <string name="title_edit_lair_action">Lair Action</string>
-    <string name="title_edit_lair_actions">Lair Actions</string>
-    <string name="title_edit_language">Language</string>
-    <string name="title_edit_languages">Languages</string>
-    <string name="title_edit_legendary_action">Legendary Action</string>
-    <string name="title_edit_legendary_actions">Legendary Actions</string>
-    <string name="title_edit_monster">Edit %1$s</string>
-    <string name="title_edit_reaction">Reaction</string>
-    <string name="title_edit_reactions">Reactions</string>
-    <string name="title_edit_regional_action">Regional Action</string>
-    <string name="title_edit_regional_actions">Regional Actions</string>
-    <string name="title_edit_speed">Speed</string>
-    <string name="title_edit_saving_throws">Saving Throws</string>
-    <string name="title_edit_sense">Senses</string>
-    <string name="title_edit_senses">Senses</string>
-    <string name="title_edit_skill">Skill</string>
-    <string name="title_edit_skills">Skills</string>
+    <string name="title_editAbilities">Ability</string>
+    <string name="title_editAbility">Abilities</string>
+    <string name="title_editAbilityScores">Ability Scores</string>
+    <string name="title_editAction">Action</string>
+    <string name="title_editActions">Actions</string>
+    <string name="title_editArmor">Armor</string>
+    <string name="title_editBasicInfo">Basic Info</string>
+    <string name="title_editChallengeRating">Challenge Rating</string>
+    <string name="title_editConditionImmunities">Condition Immunities</string>
+    <string name="title_editConditionImmunity">Condition Immunity</string>
+    <string name="title_editDamageImmunities">Damage Immunities</string>
+    <string name="title_editDamageImmunity">Damage Immunity</string>
+    <string name="title_editDamageResistance">Damage Resistance</string>
+    <string name="title_editDamageResistances">Damage Resistances</string>
+    <string name="title_editDamageVulnerabilities">Damage Vulnerabilities</string>
+    <string name="title_editDamageVulnerability">Damage Vulnerability</string>
+    <string name="title_editLairAction">Lair Action</string>
+    <string name="title_editLairActions">Lair Actions</string>
+    <string name="title_editLanguage">Language</string>
+    <string name="title_editLanguages">Languages</string>
+    <string name="title_editLegendaryAction">Legendary Action</string>
+    <string name="title_editLegendaryActions">Legendary Actions</string>
+    <string name="title_editMonster">Edit Monster</string>
+    <string name="title_editMonster_fmt">Edit %1$s</string>
+    <string name="title_editReaction">Reaction</string>
+    <string name="title_editReactions">Reactions</string>
+    <string name="title_editRegionalAction">Regional Action</string>
+    <string name="title_editRegionalActions">Regional Actions</string>
+    <string name="title_editSpeed">Speed</string>
+    <string name="title_editSavingThrows">Saving Throws</string>
+    <string name="title_editSense">Senses</string>
+    <string name="title_editSenses">Senses</string>
+    <string name="title_editSkill">Skill</string>
+    <string name="title_editSkills">Skills</string>
+    <string name="title_editString">String</string>
+    <string name="title_editStrings">Strings</string>
+    <string name="title_editTrait">Trait</string>
+    <string name="title_editTraits">Traits</string>
     <string name="title_importMonster">Import Monster</string>
     <string name="title_library">Library</string>
+    <string name="title_monsterDetails">Monster Details</string>
+    <string name="title_monsterDetails_fmt">%1$s Details</string>
     <string name="title_search">Search</string>
     <string name="wisdom_abbreviation">WIS</string>
 </resources>
